manifests/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: shrunk
  namespace: oit-eas-macs-shrunk
spec:
  host: shrunk.rutgers.edu
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 4343
  wildcardPolicy: None
  # This is handled by the VIP load balancer team, normally you would need this for https
  # tls:
  #   termination: edge
  #   insecureEdgeTerminationPolicy: Redirect
